# communicate-between-processes

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  create_directory.cpp  create_processes.cpp  generate_key.cpp  main.cpp  use_etl.cpp  use_message_queues.cpp  use_message_ring_buffer.cpp  use_permissions.cpp  use_pipes.cpp  use_scan.cpp  use_semaphores.cpp  use_strong_type.cpp  use_system_v_semaphores.cpp  use_system_v_shared_memory.cpp
apps/asynchronous_logger/: CMakeLists.txt
apps/asynchronous_logger/src/: main.cpp
apps/consumer_producer/: CMakeLists.txt
apps/consumer_producer/include/: message_queue.hpp  occupation.hpp  process_info.hpp  role.hpp
apps/consumer_producer/include/buffering/: message_queue.hpp  occupation.hpp  process_creation.hpp  processor.hpp  resource_releaser.hpp  role.hpp
apps/consumer_producer/include/occupation/: consumer.hpp  producer.hpp
apps/consumer_producer/include/role/: child.hpp  parent.hpp
apps/consumer_producer/src/: main.cpp
apps/consumer_producer_problem/: CMakeLists.txt
apps/consumer_producer_problem/include/buffering/: process_info.hpp  processor.hpp  shared_data.hpp
apps/consumer_producer_problem/src/: main.cpp
apps/create_language/: CMakeLists.txt
apps/create_language/include/kaleidoscope/: abstract_syntax_tree.hpp  abstract_syntax_tree_formatter.hpp  buffer_reader.hpp  lexer.hpp  parser.hpp  token.hpp  token_formatter.hpp
apps/create_language/src/: abstract_syntax_tree.cpp  main.cpp
apps/create_logger/: CMakeLists.txt
apps/create_logger/src/: main.cpp
apps/gui_app/: CMakeLists.txt
apps/sleeping_barber_problem/: CMakeLists.txt
apps/sleeping_barber_problem/include/barber/: customer_queue.hpp  process_info.hpp  shared_data.hpp
apps/sleeping_barber_problem/src/: main.cpp
apps/test_ground/: CMakeLists.txt
apps/test_ground/src/: main.cpp
apps/text_editor/: CMakeLists.txt
apps/text_editor/src/: main.cpp
apps/threading/: CMakeLists.txt
apps/threading/include/: hierarchical_mutex.hpp  joining_thread.hpp  lazy_initialize.hpp  parallel_accumulate.hpp  scoped_thread.hpp  thread_guard.hpp  threadsafe_queue.hpp  threadsafe_stack.hpp  use_mutex.hpp  use_packaged_task.hpp  use_parallel_accumulate.hpp  use_promise.hpp  use_shared_mutex.hpp  use_shared_resource.hpp  use_threads.hpp  use_threadsafe_queue.hpp  use_unique_lock.hpp  wait_for_condition.hpp  wait_for_event.hpp
apps/threading/src/: main.cpp
apps/use_sqlite/: CMakeLists.txt
apps/use_sqlite/src/: main.cpp
include/: error_code.hpp
include/lock_free/: ring_buffer.hpp
include/posix/: error_code.hpp  message_queue.hpp  message_queue_open_flags_builder.hpp  mutex.hpp  named_semaphore.hpp  named_semaphore_open_flags_builder.hpp  open_flags.hpp  open_flags_builder.hpp  permissions.hpp  permissions_builder.hpp  pipe.hpp  process.hpp  shared_memory.hpp  unnamed_semaphore.hpp  utility.hpp
include/posix/ipc/: message_queue.hpp  message_queue_open_flags_builder.hpp  named_semaphore.hpp  named_semaphore_open_flags_builder.hpp  open_flags.hpp  open_flags_builder.hpp  pipe.hpp  primitive.hpp  shared_memory.hpp  unnamed_semaphore.hpp  utility.hpp
include/system_v/ipc/: message_queue.hpp  semaphore.hpp  shared_memory.hpp
include/unix/: permissions_builder.hpp  process.hpp  utility.hpp
include/unix/posix/: permissions_builder.hpp  process.hpp
include/unix/posix/fs/: utility.hpp
include/unix/posix/ipc/: named_semaphore.hpp  named_semaphore_open_flags_builder.hpp  open_flags_builder.hpp  pipe.hpp  primitive.hpp  shared_memory.hpp  unnamed_semaphore.hpp  utility.hpp
include/unix/system_v/ipc/: group_notifier.hpp  key.hpp  message_queue.hpp  open_flags_builder.hpp  primitive.hpp  semaphore.hpp  semaphore_set.hpp  shared_memory.hpp
libs/common/: CMakeLists.txt
libs/common/include/common/: process.hpp
libs/core/: CMakeLists.txt
libs/core/include/core/: deleter.hpp  error_code.hpp  random_integer_generator.hpp  string_literal.hpp  variant_cast.hpp
libs/disk_scheduling/: CMakeLists.txt
libs/disk_scheduling/include/disk_scheduling/: disk.hpp  look.hpp  scan.hpp
libs/lock_free/: CMakeLists.txt
libs/test/: CMakeLists.txt
libs/unix/: CMakeLists.txt
libs/unix/include/: string_literal.hpp
tests/: CMakeLists.txt
tests/lock_free_tests/: CMakeLists.txt  test_message_ring_buffer.cpp
tests/test_tests/: CMakeLists.txt  test_member_accessor.cpp
(+51 files in other folders)
